--- a/Angular/src/app/signUpPatient/signUpPatient.component.html
+++ b/Angular/src/app/signUpPatient/signUpPatient.component.html
@@ -1,13 +1,13 @@
   
-  <div class="signUpVolunteer-body">
-    <div class="signUpVolunteer-wrapper">
-    <div class="signUpVolunteer-container">
-      <div class="signUpVolunteer-head">
+  <div class="signUpPatient-body">
+    <div class="signUpPatient-wrapper">
+    <div class="signUpPatient-container">
+      <div class="signUpPatient-head">
         <h2>הרשמה</h2>
       </div>
   
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:שם מלא</label>
           <input type="text" formControlName="fullName" required />
           <div *ngIf="signUpForm.get('fullName')?.invalid && (signUpForm.get('fullName')?.dirty || signUpForm.get('fullName')?.touched)" class="error-message">
@@ -15,7 +15,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:סיסמה</label>
           <input type="password" formControlName="password" required />
           <div *ngIf="signUpForm.get('password')?.invalid && (signUpForm.get('password')?.dirty || signUpForm.get('password')?.touched)" class="error-message">
@@ -26,7 +26,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:אימייל</label>
           <input type="email" formControlName="email" required />
           <div *ngIf="signUpForm.get('email')?.invalid && (signUpForm.get('email')?.dirty || signUpForm.get('email')?.touched)" class="error-message">
@@ -35,7 +35,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:טלפון</label>
           <input type="text" formControlName="phone" required />
           <div *ngIf="signUpForm.get('phone')?.invalid && (signUpForm.get('phone')?.dirty || signUpForm.get('phone')?.touched)" class="error-message">
@@ -44,7 +44,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:תאריך לידה</label>
           <input type="date" formControlName="birthDate" required />
           <div *ngIf="signUpForm.get('birthDate')?.invalid && (signUpForm.get('birthDate')?.dirty || signUpForm.get('birthDate')?.touched)" class="error-message">
@@ -52,12 +52,12 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:פרטים נוספים</label>
           <textarea formControlName="extraDetailse"></textarea>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:אזור</label>
           <select formControlName="area" required>
             <option value="">בחר אזור</option>
@@ -68,7 +68,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:עיר</label>
           <select formControlName="city" required>
             <option value="">בחר עיר</option>
@@ -79,7 +79,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:מגדר</label>
           <select formControlName="gender" required>
             <option value="">בחר מגדר</option>
@@ -90,7 +90,7 @@
           </div>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:זמני זמינות</label>
           <div formArrayName="availableTimes">
             <div *ngFor="let time of availableTimes.controls; let i=index" [formGroupName]="i">
@@ -119,7 +119,7 @@
           <button type="button" (click)="addAvailableTime()" class="add-btn">הוסף זמן זמינות</button>
         </div>
   
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:רמת דתיות</label>
           <select formControlName="religiosity" required>
             <option value="">בחר רמת דתיות</option>
@@ -131,7 +131,7 @@
         </div>
   
         <!-- שפות מדוברות -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:שפות מדוברות</label>
           <div class="checkbox-group">
             <div *ngFor="let lang of languages; let i=index">
@@ -153,7 +153,7 @@
         </div>
   
         <!-- העדפת שפות -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:העדפת שפות</label>
           <div class="checkbox-group">
             <div *ngFor="let lang of languages; let i=index">
@@ -175,7 +175,7 @@
         </div>
   
         <!-- תחומי עניין -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:תחומי עניין</label>
           <div class="checkbox-group">
             <div *ngFor="let interest of interests; let i=index">
@@ -197,7 +197,7 @@
         </div>
   
         <!-- העדפת מגדר -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:העדפת מגדר</label>
           <div class="checkbox-group">
             <div *ngFor="let g of genders; let i=index">
@@ -219,7 +219,7 @@
         </div>
   
         <!-- העדפת גיל -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:העדפת גיל</label>
           <div class="checkbox-group">
             <div *ngFor="let age of ageGroups; let i=index">
@@ -241,7 +241,7 @@
         </div>
   
         <!-- העדפת רמת דתיות -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:העדפת רמת דתיות</label>
           <div class="checkbox-group">
             <div *ngFor="let religiosity of religiosities; let i=index">
@@ -262,7 +262,7 @@
           </div>
         </div>
           <!--  בתי חולים -->
-          <div class="input-group-out-vol">
+          <div class="input-group-out-pat">
             <label>:בית חולים</label>
             <div class="checkbox-group">
               <div *ngFor="let hospitall of hospitalls; let i=index">
@@ -284,7 +284,7 @@
           </div>
     
         <!--  מחלקות -->
-        <div class="input-group-out-vol">
+        <div class="input-group-out-pat">
           <label>:מחלקות</label>
           <div class="checkbox-group">
             <div *ngFor="let ward of wards; let i=index">
@@ -312,8 +312,8 @@
         </ng-template>
       </form>
     </div>
-    <div class="signUpVolunteer-image">
-        <img src="../../assets/clipboard (1).png" alt="תמונה ליד טופס ההרשמה">
+    <div class="signUpPatient-image">
+        <img src="../../assets/clipboard (2).png" alt="תמונה ליד טופס ההרשמה">
     </div>
     </div>
   </div>
